--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>중고거래 사이트</title>
+    
+    <!-- 결제 API -->
+    <script src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
+
   </head>
   <body>
     <div id="root"></div>
