--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,9 @@
     
     <!-- 결제 API -->
     <script src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
+    <!-- 우편번호 -->
+    <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+
 
   </head>
   <body>
